# nori

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  _config.yml  docker-compose.yml  index.md  mkdocs.yml  norikv.example.yaml
.github/workflows/: gh-pages.yml
apps/norikv-dashboard/: .gitignore  (+5 more)
apps/norikv-server/: Cargo.toml  README.md
apps/norikv-server/src/: cluster_view.rs  config.rs  health.rs  http.rs  lib.rs  main.rs  metrics.rs  multi_shard_backend.rs  node.rs  shard_manager.rs
apps/norikv-server/tests/: admin_integration_test.rs  cas_integration_test.rs  grpc_integration_test.rs  http_kv_test.rs  multi_node_test.rs  multi_node_test.rs.disabled  smoke_test.rs  vector_integration_test.rs
apps/norikv-vizd/: Cargo.toml  README.md
apps/norikv-vizd/src/: aggregator.rs  event.rs  main.rs  ringbuffer.rs  subscription.rs  ws.rs
architecture/: index.md
context/: 36_dashboard.yaml  40_protocols.proto  lsm_atll_benchmarks.yaml  lsm_atll_design.yaml  lsm_atll_design_distributed.yaml
crates/nori-hnsw/: Cargo.toml
crates/nori-hnsw/benches/: hnsw.rs
crates/nori-hnsw/src/: graph.rs  index.rs  layer.rs  lib.rs
crates/nori-lsm/: Cargo.toml  README.md
crates/nori-lsm/benches/: bloom_filter_impact.rs  compaction_scheduler.rs  heavy_workloads.rs  lsm_operations.rs  range_scans.rs
crates/nori-lsm/core-concepts/: read-path.md  what-is-lsm.md  when-to-use.md
crates/nori-lsm/design-decisions/: bandit-scheduler.md  guard-based-partitioning.md  index.md  memory-pressure.md
crates/nori-lsm/how-it-works/: snapshot-process.md
crates/nori-lsm/src/: compaction.rs  config.rs  error.rs  flush.rs  guards.rs  heat.rs  iterator.rs  lib.rs  manifest.rs  memtable.rs  raft_sm.rs  vector.rs  vector_engine.rs
crates/nori-lsm/tests/: lsm_correctness_tests.rs
crates/nori-raft/: Cargo.toml  README.md
crates/nori-raft/src/: config.rs  election.rs  error.rs  lease.rs  lib.rs  log.rs  lsm_adapter.rs  raft.rs  read_index.rs.bak  replicated_lsm.rs  replication.rs  rpc_handler.rs  rpc_handler.rs.bak  state.rs  timer.rs  transport.rs  types.rs
crates/nori-raft/tests/: integration_test.rs  integration_tests.rs  linearizability_stress_test.rs  raft_safety_tests.rs  replicated_lsm_test.rs  stability_tests.rs  three_node_cluster_test.rs
crates/nori-sstable/: Cargo.toml  README.md  caching.md  getting-started.md  index.md
crates/nori-sstable/benches/: bloom_filter.rs  bloom_tuning.rs  build_sstable.rs  filter_comparison.rs  quotient_filter.rs  read_sstable.rs
crates/nori-sstable/core-concepts/: compression-fundamentals.md  immutability.md  index.md  when-to-use.md
crates/nori-sstable/design-decisions/: block-based.md  index.md
crates/nori-sstable/how-it-works/: file-format.md
crates/nori-sstable/internals/: index.md
crates/nori-sstable/performance/: tuning.md
crates/nori-sstable/recipes/: index.md
crates/nori-sstable/src/: block.rs  bloom.rs  builder.rs  compress.rs  entry.rs  error.rs  format.rs  index.rs  iterator.rs  lib.rs  quotient_filter.rs  reader.rs  vector_block.rs  writer.rs
crates/nori-sstable/tests/: compression_tests.rs  property_tests.rs  sstable_roundtrip.rs  stress_tests.rs
crates/nori-swim/: Cargo.toml  README.md
crates/nori-swim/src/: chaos.rs  config.rs  lib.rs  member_list.rs  message.rs  node.rs  probe.rs  suspicion.rs  timer.rs  transport.rs
crates/nori-testkit/: Cargo.toml  README.md
crates/nori-testkit/src/: fault_injection.rs  generators.rs  lib.rs  linearizability.rs
crates/nori-vamana/: Cargo.toml
crates/nori-vamana/src/: builder.rs  graph.rs  index.rs  lib.rs  pq.rs
crates/nori-vector/: Cargo.toml
crates/nori-vector/benches/: distance.rs
crates/nori-vector/src/: brute.rs  distance.rs  lib.rs  traits.rs
crates/nori-wal/: Cargo.toml  README.md  index.md
crates/nori-wal/api-reference/: config.md  errors.md  index.md  record.md
crates/nori-wal/benches/: concurrent_writes.rs  garbage_collection.rs  read_performance.rs  recovery.rs
crates/nori-wal/core-concepts/: append-only.md  fsync-policies.md  index.md  recovery-guarantees.md  what-is-wal.md  when-to-use.md
crates/nori-wal/design-decisions/: recovery-strategy.md  segmentation.md
crates/nori-wal/getting-started/: configuration.md  index.md  installation.md
crates/nori-wal/how-it-works/: concurrency.md  index.md  record-format.md  recovery.md  segment-lifecycle.md
crates/nori-wal/internals/: index.md
crates/nori-wal/performance/: hardware.md  tuning.md
crates/nori-wal/recipes/: event-sourcing.md  key-value-store.md
crates/nori-wal/src/: lib.rs  prealloc.rs  record.rs  segment.rs
crates/norikv-placement/: Cargo.toml
crates/norikv-placement/src/: lib.rs
crates/norikv-placement/tests/: generate_test_vectors.rs
crates/norikv-transport-grpc/: Cargo.toml  build.rs
crates/norikv-transport-grpc/src/: admin.rs  health.rs  kv.rs  kv_backend.rs  lib.rs  meta.rs  raft.rs  raft_service.rs  server.rs  vector.rs  vector_backend.rs
design-decisions/: index.md
docker/: README.md  cluster-status.sh  start-cluster.sh  stop-cluster.sh
docs/: CNAME  _config.yml  index.md
internals/: index.md  segment-lifecycle.md
performance/: benchmarks.md  index.md
proto/: README.md  norikv.proto
recipes/: index.md
sdks/python/: .gitignore  .mypy.ini  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
sdks/python/examples/: basic_usage.py
sdks/python/norikv/: __init__.py  client.py  ephemeral.py  errors.py  hash.py  py.typed  types.py
sdks/python/norikv/_internal/: connection.py  retry.py  router.py  topology.py
sdks/python/norikv/proto/: __init__.py
sdks/python/proto/: norikv.proto
sdks/python/tests/integration/: __init__.py  test_client.py  test_client_basic.py  test_ephemeral.py
sdks/python/tests/integration/helpers/: __init__.py  mock_server.py
sdks/python/tests/unit/: test_errors.py  test_hash.py  test_types.py  test_vector.py
site/: 404.html  Gemfile  index.html  sitemap.xml
sstable/: caching.md  compression.md  getting-started.md  index.md
test-vectors/: hash-vectors.json
(+463 files in other folders)
