[workspace]
resolver = "2"
members = [
  "crates/nori-observe",
  "crates/nori-observe-prom",
  "crates/nori-observe-otlp",
  "crates/nori-wal",
  "crates/nori-sstable",
  "crates/nori-lsm",
  "crates/nori-swim",
  "crates/nori-raft",
  "crates/norikv-types",
  "crates/norikv-placement",
  "crates/norikv-transport-grpc",
  "crates/nori-testkit",
  "apps/norikv-server",
  "apps/norikv-vizd",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.metadata.release]
shared-version = false
