[package]
name = "norikv-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
nori-observe = { path = "../../crates/nori-observe" }
nori-lsm = { path = "../../crates/nori-lsm" }
nori-raft = { path = "../../crates/nori-raft" }
norikv-transport-grpc = { path = "../../crates/norikv-transport-grpc" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
bytes = "1"
