[package]
name = "norikv-vizd"
version = "0.1.0"
edition = "2021"
publish = false
description = "NoriKV visualization daemon - event aggregator and WebSocket bridge"

[dependencies]
nori-observe = { path = "../../crates/nori-observe" }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "compression-gzip"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"

# Utilities
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
