[package]
name = "nori-lsm"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Embeddable LSM engine (WAL+SST+compaction+snapshots)."
repository = "https://github.com/your-org/norikv"
readme = "README.md"

[dependencies]
nori-observe = { path = "../nori-observe" }
nori-wal = { path = "../nori-wal" }
nori-sstable = { path = "../nori-sstable" }
tokio = { version = "1", features = ["full"] }
bytes = { version = "1", features = ["serde"] }
crossbeam-skiplist = "0.1"
serde = { version = "1", features = ["derive"] }
bincode = "1"
crc32c = "0.6"
async-trait = "0.1"
parking_lot = "0.12"
lru = "0.12"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
proptest = "1"
criterion = "0.5"
