[package]
name = "nori-raft"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Raft core consensus with read-index and leases."
repository = "https://github.com/your-org/norikv"
readme = "README.md"

[dependencies]
nori-observe = { path = "../nori-observe" }
nori-wal = { path = "../nori-wal" }
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
bytes = { version = "1.0", features = ["serde"] }
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
rand = "0.8"
bincode = "1.3"

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.0"
tempfile = "3.0"
