[package]
name = "nori-swim"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "SWIM-like membership/failure detector."
repository = "https://github.com/your-org/norikv"
readme = "README.md"

[dependencies]
nori-observe = { path = "../nori-observe" }
tokio = { version = "1.42", features = ["sync", "time", "rt", "macros"] }
async-trait = "0.1"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
