[package]
name = "nori-vamana"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "DiskANN/Vamana index for disk-resident approximate nearest neighbor search with Product Quantization."
repository = "https://github.com/your-org/norikv"
readme = "README.md"

[dependencies]
nori-vector = { path = "../nori-vector" }
nori-observe = { path = "../nori-observe" }
bytes = "1.5"
thiserror = "1.0"
parking_lot = "0.12"
rand = "0.8"
memmap2 = "0.9"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tempfile = "3.8"

[[bench]]
name = "vamana"
harness = false

[[bench]]
name = "pq"
harness = false
