[package]
name = "nori-wal"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Append-only write-ahead log with recovery and rotation."
repository = "https://github.com/your-org/norikv"
readme = "README.md"

[dependencies]
nori-observe = { path = "../nori-observe" }
tokio = { version = "1", features = ["fs", "io-util", "sync", "time", "rt"] }
bytes = "1"
crc32c = "0.6"
thiserror = "1"
bitflags = "2"
lz4 = "1.24"
zstd = "0.13"
serde = { version = "1", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
proptest = "1"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "sequential_writes"
harness = false

[[bench]]
name = "concurrent_writes"
harness = false

[[bench]]
name = "read_performance"
harness = false

[[bench]]
name = "recovery"
harness = false

[[bench]]
name = "garbage_collection"
harness = false
