[package]
name = "norikv-placement"
version = "0.1.0"
edition = "2021"
publish = false
description = "Shard planning + minimal-move diff."
repository = "https://github.com/your-org/norikv"
readme = "README.md"

[dependencies]
nori-observe = { path = "../nori-observe" }
twox-hash = "1.6"  # xxhash implementation
parking_lot = "0.12"  # RwLock for SimpleRouter

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
chrono = "0.4"
