[package]
name = "norikv-transport-grpc"
version = "0.1.0"
edition = "2021"
publish = false
description = "gRPC transport + HTTP façade."
repository = "https://github.com/your-org/norikv"
readme = "README.md"

[dependencies]
nori-observe = { path = "../nori-observe" }
nori-raft = { path = "../nori-raft" }
tonic = "0.11"
prost = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
bytes = "1"
tracing = "0.1"
thiserror = "1"

[build-dependencies]
tonic-build = "0.11"
