[build-system]
requires = ["setuptools>=68.0", "wheel", "grpcio-tools>=1.60.0"]
build-backend = "setuptools.build_meta"

[project]
name = "norikv"
version = "0.1.0"
description = "Python client SDK for NoriKV - a sharded, Raft-replicated key-value store"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "NoriKV Contributors"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
keywords = ["database", "key-value", "distributed", "raft", "grpc"]

dependencies = [
    "grpcio>=1.60.0,<2.0.0",
    "grpcio-tools>=1.60.0,<2.0.0",
    "protobuf>=4.25.0,<6.0.0",
    "xxhash>=3.4.0,<4.0.0",
    "pyyaml>=6.0.0,<7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "mypy-protobuf>=3.5.0",
    "grpc-stubs>=1.53.0",
    "types-protobuf>=4.24.0",
]

[project.urls]
Homepage = "https://github.com/norikv/norikv"
Documentation = "https://norikv.dev"
Repository = "https://github.com/norikv/norikv"
Issues = "https://github.com/norikv/norikv/issues"

[tool.setuptools]
packages = ["norikv"]

[tool.setuptools.package-data]
norikv = ["py.typed", "proto/*.py", "proto/*.pyi"]

# Black code formatter
[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | \.venv
  | build
  | dist
  | norikv/proto
)/
'''

# Ruff linter
[tool.ruff]
line-length = 88
target-version = "py39"
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
    "norikv/proto",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by black)
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["norikv"]

# MyPy type checker
[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
plugins = ["mypy_protobuf"]

[[tool.mypy.overrides]]
module = "norikv.proto.*"
ignore_errors = true

# Pytest
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests with mock server",
    "e2e: End-to-end tests with real NoriKV server",
    "slow: Slow-running tests",
]
timeout = 30

# Coverage
[tool.coverage.run]
source = ["norikv"]
omit = [
    "norikv/proto/*",
    "tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
